# orb

./: .env  .env.example  .gitignore  CLAUDE.md  COPYRIGHT  Makefile  README.md  examples_large_graphs.py  graph_storage.py  plan.md  pyproject.toml  sample.py  shortest_path.py  test_graph_storage.py  test_large_scale_performance.py  test_shortest_path.py
.github/workflows/: tests.yml
docs/: architecture.html  sprints.md
orb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orb/agent/: base.py  compaction.py  conversation.py  llm_agent.py  prompt_builder.py  tools.py  types.py
orb/cli/: auth.py  config.py  display.py  live_display.py  main.py  onboard.py  repl.py  tui.py
orb/graph/: types.py
orb/llm/: __init__.py  _format.py  anthropic.py  codex.py  model_selector.py  openai.py  providers.py  registry.py  types.py
orb/memory/: __init__.py  memory_graph.py  memory_node.py
orb/messaging/: __init__.py  bus.py  channel.py  message.py  middleware.py
orb/orchestrator/: orchestrator.py  types.py
orb/runtime/: __init__.py  graph_runtime.py
scripts/: pre-commit  record_demo_video.sh
talks/: plan.md
tests/: test_auth.py  test_bus.py  test_channel.py  test_claude_agent.py  test_cli_main.py  test_compaction.py  test_conversation.py  test_graph.py  test_memory_graph.py  test_model_selector.py  test_onboard.py  test_orchestrator.py  test_prompt_builder.py  test_server_api.py  test_server_events.py  test_shortest_path_edgecases.py  test_triangle.py  test_tui_event_handler.py
web/: __init__.py  bridge.py  server.py  state.py
(+12 files in other folders)
